
- Now compatible with Microsoft Windows Restart Manager
- Updated Spanish Translations (Thanks to Fitoschido)
- Updated German Translations (Thanks to Chris G)
- Updated French Translations (Thanks to Tulip V)
- Compatible with Windows 7 task bar
- Program no longer starts up maximized
- Fixed recent docs scanner so it displays the correct registry key path
- No longer displays duplicate problems
- Upgraded to Microsoft .NET Framework v4
- Uninstall & Startup Manager are now seperate executables
- Details window is no longer displayed when a parent node is double clicked
- Implemented task scheduler to schedule registry scans
- Registry scans can be started by specifying "/scan" argument
- Integrated DeskMetrics into Little Registry Cleaner

+ Version 1.5 Released

- Fixed bug when trying to create scheduled tasks on Windows Task Scheduler 1.0 (Windows 2000, XP and Server 2003)
- Fixed bug that prevented LRC from closing if DeskMetrics was disabled
- No longer displays bug report when trying to contactDeskMetrics with no internet connection
- NsisDeskMetrics plugin no longer requires the Microsoft Visual C++ 2010 Redistributable Package to run
- Added check for null string in PrefixRegPath()
- Manually generates GUID for DeskMetrics if an error occured in System.Guid
- Fixed spelling mistake that prevented LRC to load on Lithuanian computers
- No longer displays exception if "cmdLine" passed to ExtractArguments() is null
- Displays error message instead of exception if file is not found when executed with startup manager

+ Version 1.5.1 Released

- Downgraded Microsoft .NET Framework to v3.5
- Integrated Little Software Stats
- Added new icons
- Integrated AutoUpdater.NET
- Updated Little Registry icon
- Fixed permission problems with removing bad registry keys
- Update Russian translations (Thanks to Sersell)
- Updated German Translations (Thanks to Jurg S.)
- Fixed problem with scheduler not showing correct time for existing job

+ Version 1.6 Released