@@ -14,16 +14,16 @@
                 <value>True</value>
             </setting>
             <setting name="strBackupFile" serializeAs="String">
-                <value/>
+                <value />
             </setting>
             <setting name="bOptionsRescan" serializeAs="String">
-                <value>True</value>
+                <value>False</value>
             </setting>
             <setting name="bOptionsDelBackup" serializeAs="String">
-                <value>True</value>
+                <value>False</value>
             </setting>
             <setting name="bOptionsRestore" serializeAs="String">
-                <value>True</value>
+                <value>False</value>
             </setting>
             <setting name="bOptionsAutoUpdate" serializeAs="String">
                 <value>True</value>
